--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="./style/style.css">
     <title>vegan</title>
 </head>
 <body>
     <header class="flex">
+        <p class="burgermenu"><i class="fa-sharp fa-solid fa-bars"></i></p>
         <nav>
             <ul class="flex">
                 <li><a href="#">ვეგანური პროდუქცია</a></li>
@@ -30,20 +32,37 @@
                 <p class="text">მიიღე კალციუმით მდიდარი საკვები: უცხიმო ან ნაკლებად ცხიმიანი რძის პროდუქტები.</p>
                 <div class="fotoli"></div>
             </div>
+            <div class="box num">
+                <div class="fotoli fotoli2"></div>
+                <p class="text">მიიღე კალციუმით მდიდარი საკვები: უცხიმო ან ნაკლებად ცხიმიანი რძის პროდუქტები</p>
+            </div>
             <div class="box box1">
                 <div class="fotoli fotoli2"></div>
-                <p class="text">საკვებ რაციონში ჩართე მწვანე და ნარინჯისფერი ხილი და ბოსტნეული.</p>
+                <p class="text">დაიძინე ერთსა და იმავე დროს, დარწმუნდით, რომ საკმარისად დიდხანს გძინავთ</p>
             </div>
             <div class="box box2">
                 <p class="text">დალიეთ სუფთა წყალი ყოველდღე. დეჰიდრატაცია იწვევს კანის ელასტიურობის დაქვეითებას.</p>
                 <div class="fotoli"></div>
             </div>
+            <div class="box num2">
+                <div class="fotoli fotoli2"></div>
+                <p class="text">დალიეთ სუფთა წყალი ყოველდღე. დეჰიდრატაცია იწვევს კანის ელასტიურობის დაქვეითებას.</p>
+            </div>
             <div class="box box3">
                 <div class="fotoli fotoli2"></div>
+                <p class="text">საკვებ რაციონში ჩართე მწვანე და ნარინჯისფერი ხილი და ბოსტნეული.</p>
+            </div>
+            <div class="size">
                 <p class="text">დაიძინე ერთსა და იმავე დროს, დარწმუნდით, რომ საკმარისად დიდხანს გძინავთ</p>
+                <div class="fotoli fotoli2"></div>
+            </div>
+            <div class="size size2">
+                <p class="text">საკვებ რაციონში ჩართე მწვანე და ნარინჯისფერი ხილი და ბოსტნეული.</p>
+                <div class="fotoli fotoli2"></div>
             </div>
         </div>
     </main>
     <footer></footer>
+    <script src="https://kit.fontawesome.com/7a935d1852.js" crossorigin="anonymous"></script>
 </body>
 </html>
